feat: some fixes and improvements
